--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <h1>Our Menu</h1>
+    <div class="lg md sm">
+        <div >
+            <h2 id="a" class="head">Chicken</h2>
+        </div>
+        <div class="content">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas sint voluptas quibusdam sit odio numquam alias esse cupiditate enim illum! Sed quod necessitatibus libero possimus minima accusamus facilis dolor corporis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt totam suscipit, voluptatibus quam reiciendis voluptates harum ad maxime impedit neque dolorum eligendi earum praesentium voluptas eaque commodi qui accusantium iusto.
+        </div>
+    </div >
+    <div class="lg md sm ">
+        <div>
+            <h2 id="b" class="head">Beef</h2>
+        </div>
+        <div class="content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae vitae similique magni, dicta cumque animi nostrum ut fugit rerum alias explicabo temporibus repellendus ipsa, fugiat eligendi molestiae eos vero dolore! Lorem ipsum dolor sit amet, consectetur adipisiciLorem ipsum dolor, sit amet consectetur adipisicingng elit. Vel nam ipsam cumque facere libero sed magnam quaerat ea pariatur id dignissimos ipsa corrupti illum omnis numquam ratione commodi, quibusdam repellat?
+        </div>
+    </div>
+    <div class="lg sm u">
+        <div >
+            <h2 id="c" class="head">Sushi</h2>
+        </div>
+        <div class="content">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, in fugit quam a dolore excepturi quae ab optio nihil unde porro labore vero repellendus beatae. Ratione provident necessitatibus ipsam tenetur.lorem
+            Lorem ipsum dolor sit amet consectetur adipisicing Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque fugiat laborum officia magni, dolore animi debitis molestias excepturi nesciunt? Alias quia consequatur non, amet repudiandae ratione nulla eveniet et magnam!
+        </div>
+    </div>
 </body>
 </html>
